--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ryan website</title>
+    <title>Ryan's Website</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <nav>
+
+    </nav>
+    <main>
+        Hi, I'm <strong>Ryan Vo</strong> (he/him), and I am a second-year Computer Science 
+        major from San Diego, CA. I can clap one-handed, which will be useful 
+        if I ever lose one of my hands. I enjoy playing video games, going to 
+        the gym, and window shopping.
+    </main>
+    <footer>
+        © 2023 Ryan Vo | All Rights Reserved
+    </footer>
 </body>
 </html>
