Create initial resume outline

--- a/resume.html
+++ b/resume.html
@@ -7,17 +7,26 @@
     <title>Ryan's Website</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
+        <h1 class="logo"></h1>
 
     </nav>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <h1 class="resume"></h1>
+        <div class="resume">
+            <section class="section"></section>
+                <h2 class="Education"></h2>
+            <section class="section"></section>
+                <h2 class="Skills"></h2>
+            <section class="section"></section>
+                <h2 class="Projects"></h2>
+            <section class="section"></section>
+                <h2 class="Experience"></h2>
+            <section class="section"></section>
+                <h2 class="Campus Involvement"></h2>
+        </div>
     </main>
-    <footer>
+    <footer class="footer">
         © 2023 Ryan Vo | All Rights Reserved
     </footer>
 </body>
