--- a/blog.html
+++ b/blog.html
@@ -7,17 +7,18 @@
     <title>Ryan's Website</title>
 </head>
 <body>
-    <nav>
-
+    <nav class="navbar">
+        <h1 class="logo"></h1>
     </nav>
     <main>
+        <h1 class="blog"></h1>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
     </main>
-    <footer>
+    <footer class="footer">
         © 2023 Ryan Vo | All Rights Reserved
     </footer>
 </body>
