--- a/index.html
+++ b/index.html
@@ -7,16 +7,25 @@
     <title>Ryan's Website</title>
 </head>
 <body>
-    <nav>
-
+    <nav class="navbar">
+        <h1 class="logo"></h1>
     </nav>
     <main>
-        Hi, I'm <strong>Ryan Vo</strong> (he/him), and I am a second-year Computer Science 
-        major from San Diego, CA. I can clap one-handed, which will be useful 
-        if I ever lose one of my hands. I enjoy playing video games, going to 
-        the gym, and window shopping.
+        <h1 class="index"></h1>
+        <div class="about">
+            <div class="about-image"></div>
+            <div class="about-text">
+                <p>
+                    Hi, I'm <strong>Ryan Vo</strong> (he/him), and I am a second-year Computer Science 
+                    major from San Diego, CA. I can clap one-handed, which will be useful 
+                    if I ever lose one of my hands. I enjoy playing video games, going to 
+                    the gym, and window shopping.
+                </p>
+            </div>
+        </div>
+
     </main>
-    <footer>
+    <footer class="footer">
         © 2023 Ryan Vo | All Rights Reserved
     </footer>
 </body>
