--- a/portfolio.html
+++ b/portfolio.html
@@ -7,17 +7,20 @@
     <title>Ryan's Website</title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
+        <h1 class="logo"></h1>
 
     </nav>
     <main>
+        <h1 class="portfolio"></h1>
+        <div class="project"></div>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
         <section></section>
     </main>
-    <footer>
+    <footer class="footer">
         © 2023 Ryan Vo | All Rights Reserved
     </footer>
 </body>
