--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <h1 class="logo"></h1>
-
+        <h1 class="logo">
+            <a href="index.html">personal website</a>
+        </h1>
     </nav>
     <main>
         <h1 class="contact"></h1>
