[Added resume as pdf and attached input text boxes for contact]

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,26 @@
         <h1 class="logo">
             <a href="index.html">personal website</a>
         </h1>
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <main>
-        <h1 class="portfolio"></h1>
-        <div class="project"></div>
+        <h1 class="portfolio">Portfolio</h1>
+        <div class="project">
+            <a href="index.html"><img src="me.jpg" width="300px" height="300px"></a>
+            <div class="project-details">
+                <p class="project-name"><strong>Personal website</strong></p>
+                <p class="project-description">This is a personal website built 
+                    using the Hack4Impact Starter Pack!
+                    For showcasing myself and my projects.</p>
+                <a href="index.html">Learn more</a>
+            </div>
+        </div>
         <section></section>
         <section></section>
         <section></section>
