--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,22 @@
         <h1 class="logo">
             <a href="index.html">personal website</a>
         </h1>
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <main>
-        <h1 class="contact"></h1>
+        <h1 class="contact">Contact</h1>
+        <form id="contact-form">
+            Name: <input type="text" id="name">
+            Email: <input type="email" id="email">
+            Message: <textarea></textarea>
+            <input type="submit">
+        </form>
         <section></section>
         <section></section>
         <section></section>
