--- a/resume.html
+++ b/resume.html
@@ -11,20 +11,18 @@
         <h1 class="logo">
             <a href="index.html">personal website</a>
         </h1>
+        <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <main>
-        <h1 class="resume"></h1>
-        <div class="resume">
-            <section class="section"></section>
-                <h2 class="Education"></h2>
-            <section class="section"></section>
-                <h2 class="Skills"></h2>
-            <section class="section"></section>
-                <h2 class="Projects"></h2>
-            <section class="section"></section>
-                <h2 class="Experience"></h2>
-            <section class="section"></section>
-                <h2 class="Campus Involvement"></h2>
+        <h1 class="resume">Resume</h1>
+        <iframe id="resume" src="Ryan_Vo_Resume.pdf" frameborder="0" width="100%" height="1000px"></iframe>
+        <p>If unable to display PDF file: <a href="Ryan_Vo_Resume.pdf">Download</a> instead.</p>
         </div>
     </main>
     <footer class="footer">
