--- a/blog.html
+++ b/blog.html
@@ -4,28 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ryan's Website</title>
 </head>
 <body>
-    <nav class="navbar">
-        <h1 class="logo">
-            <a href="index.html">personal website</a>
-        </h1>
-        <ul class="nav-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <header id="navbar">
+        <h1 id="name">Ryan Vo</h1>
+        <nav id="navbar-links"> 
+            <a class="home" href="/index.html">Home</a>
+            <a class="blog" href="/blog.html">Blog</a>
+            <a class="portfolio" href="/portfolio.html">Portfolio</a>
+            <a class="resume" href="/resume.html">Resume</a>
+            <a class="contact" href="/contact.html">Contact</a>
+        </nav>
+    </header>
     <main>
         <h1 class="blog"></h1>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
     </main>
     <footer class="footer">
         © 2023 Ryan Vo | All Rights Reserved
