--- a/portfolio.html
+++ b/portfolio.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ryan's Website</title>
 </head>
 <body>
-    <nav class="navbar">
-        <h1 class="logo">
-            <a href="index.html">personal website</a>
-        </h1>
-        <ul class="nav-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <header id="navbar">
+        <h1 id="name">Ryan Vo</h1>
+        <nav id="navbar-links"> 
+            <a class="home" href="/index.html">Home</a>
+            <a class="blog" href="/blog.html">Blog</a>
+            <a class="portfolio" href="/portfolio.html">Portfolio</a>
+            <a class="resume" href="/resume.html">Resume</a>
+            <a class="contact" href="/contact.html">Contact</a>
+        </nav>
+    </header>
     <main>
         <h1 class="portfolio">Portfolio</h1>
         <div class="project">
-            <a href="index.html"><img src="me.jpg" width="300px" height="300px"></a>
+            <a href="index.html"><img src="peonme.jpg" width="300px" height="300px"></a>
             <div class="project-details">
                 <p class="project-name"><strong>Personal website</strong></p>
                 <p class="project-description">This is a personal website built 
@@ -31,11 +30,6 @@
                 <a href="index.html">Learn more</a>
             </div>
         </div>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
     </main>
     <footer class="footer">
         © 2023 Ryan Vo | All Rights Reserved
