--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <div class="about">
                 <div class="about-image">
-                    <img src="/me.jpg" width="300px">
+                    <img src="/me.jpg" width="300px" alt="Me">
                 </div>
                 <div class="about-text">
                     <p>
