--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="altstyle.css">
     <title>Ryan's Website</title>
 </head>
 <body>
@@ -19,7 +19,10 @@
         </nav>
     </header>
     <main>
-        <h1 class="blog"></h1>
+        <div class="blog">
+            <h1>Blog</h1>
+            <p>Hi! Nothing here right now. Check back later!</p>
+        </div>
     </main>
     <footer class="footer">
         © 2023 Ryan Vo | All Rights Reserved
