--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="altstyle.css">
     <title>Ryan's Website</title>
 </head>
 <body>
@@ -20,8 +20,10 @@
     </header>
     <main>
         <h1 class="portfolio">Portfolio</h1>
-        <div class="project">
-            <a href="index.html"><img src="peonme.jpg" width="300px" height="300px"></a>
+        <div class="personal-website">
+            <a href="/index.html" class=>
+                <img src="/me.jpg" width="300px" alt="Me">
+            </a>
             <div class="project-details">
                 <p class="project-name"><strong>Personal website</strong></p>
                 <p class="project-description">This is a personal website built 
