Change resume and contact CSS

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <form id="contact-form">
                 <h2>Name:</h2><input type="text" id="name">
                 <h2>Email:</h2><input type="email" id="email">
-                <h2>Message:</h2><textarea></textarea>
+                <h2>Message:</h2><textarea placeholder="Type in your message here!"></textarea>
                 <input id="send-message" type="submit" value="Send message">
             </form>
         </div>
