--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="altstyle.css">
     <title>Ryan's Website</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
     </header>
     <main>
         <h1 class="resume">Resume</h1>
-        <iframe id="resume" src="Ryan_Vo_Resume.pdf" frameborder="0" width="100%" height="1000px"></iframe>
-        <p>If unable to display PDF file: <a href="Ryan_Vo_Resume.pdf">Download</a> instead.</p>
+        <iframe id="resume" src="Ryan_Vo_Resume.pdf" frameborder="0" width="1100px" height="1000px"></iframe>
+        <p>If unable to display PDF file: <a id="resume-download" href="Ryan_Vo_Resume.pdf">Download</a> instead.</p>
         </div>
     </main>
     <footer class="footer">
