Massive changes to structure of html and css for navbar

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>Ryan Vo's Portfolio</title>
 </head>
     <body>
-        <header id="navbar">
-            <h1 id="name">Ryan Vo</h1>
-            <nav id="navbar-links"> 
-                <a class="home" href="/index.html">Home</a>
-                <a class="blog" href="/blog.html">Blog</a>
-                <a class="portfolio" href="/portfolio.html">Portfolio</a>
-                <a class="resume" href="/resume.html">Resume</a>
-                <a class="contact" href="/contact.html">Contact</a>
+        <header>
+            <a href="/index.html"><h1 id="name">Ryan Vo</h1></a>
+            <nav>
+                <ul class="nav_links">
+                    <li><a class="home" href="/index.html">Home</a></li>
+                    <li><a class="blog" href="/blog.html">Blog</a></li>
+                    <li><a class="portfolio" href="/portfolio.html">Portfolio</a></li>
+                    <li><a class="resume" href="/resume.html">Resume</a></li>
+                    <li><a class="contact" href="/contact.html">Contact</a></li>
+                </ul> 
             </nav>
         </header>
         <main>
