Established main style.css file, refactored html pages and style.css

--- a/index.html
+++ b/index.html
@@ -36,21 +36,31 @@
             </div>
         </main>
         <footer>
-            <div class="quicklinks">
-                <h2>Quick Links</h2>
-                <a class="home" href="/index.html">Home</a>
-                <a class="portfolio" href="/portfolio.html">Portfolio</a>
-                <a class="resume" href="/resume.html">Resume</a>
+            <div >
+                <ul class="quicklinks">
+                    <h2>Quick Links</h2>
+                    <li><a class="home" href="/index.html">Home</a></li>
+                    <li><a class="portfolio" href="/portfolio.html">Portfolio</a></li>   
+                    <li><a class="resume" href="/resume.html">Resume</a></li>   
+                </ul>
             </div>
-            <div class="other">
-                <h2>Other</h2>
-                <a class="linkedin" href="https://www.linkedin.com/in/ryanlevo/">LinkedIn</a>
-                <a class="github" href="https://github.com/ryyyvo">GitHub</a>
+            <div >
+                <ul class="other">
+                    <h2>Other</h2>
+                    <li><a class="linkedin" href="https://www.linkedin.com/in/ryanlevo/">LinkedIn</a></li>
+                    <li><a class="github" href="https://github.com/ryyyvo">GitHub</a></li>    
+                </ul> 
             </div>
-            <div class="contactinfo">
-                <h2>Contact Information</h2>
-                <p>ryanlevo123@gmail.com</p>
-                <p>© 2023 Ryan Vo | All Rights Reserved</p>
+            <div>
+                <ul class="contactinfo"> 
+                    <h2>Contact Information</h2>
+                    <li>
+                        <p>ryanlevo123@gmail.com</p>
+                    </li>
+                    <li>
+                        <p>© 2023 Ryan Vo | All Rights Reserved</p>
+                    </li>
+                </ul>
             </div>
         </footer>
     </body>
