Finishing touches on styling

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             </div>
         </main>
         <footer>
-            <div >
+            <div>
                 <ul class="quicklinks">
                     <h2>Quick Links</h2>
                     <li><a class="home" href="/index.html">Home</a></li>
                     <li><a class="portfolio" href="/portfolio.html">Portfolio</a></li>   
-                    <li><a class="resume" href="/resume.html">Resume</a></li>   
+                    <li><a class="resume-link" href="/resume.html">Resume</a></li>   
                 </ul>
             </div>
-            <div >
+            <div>
                 <ul class="other">
                     <h2>Other</h2>
                     <li><a class="linkedin" href="https://www.linkedin.com/in/ryanlevo/">LinkedIn</a></li>
