--- a/resume.html
+++ b/resume.html
@@ -28,12 +28,12 @@
                 <p>If unable to display PDF file: <a id="resume-download" href="Ryan_Vo_Resume.pdf">Download</a> instead.</p>
             </div>
             <div id="resume-section">
-                <section>
+                <section class="education">
                     <h1>Education</h1>
                     <h3>California Polytechnic State University, San Luis Obispo (Cal Poly)</h3>
                     <h4>Bachelor of Science Degree in Computer Science | Expected Graduation Date: June 2026</h4>
                 </section>
-                <section>
+                <section class="coursework">
                     <h1>Coursework</h1>
                     <ul>
                         <li>Data Structures</li>
@@ -43,7 +43,7 @@
                         <li>Calculus I, II, and III</li>
                     </ul>
                 </section>
-                <section>
+                <section class="skills">
                     <h1>Skills</h1>
                     <ul>
                         <li>Python</li>
@@ -51,17 +51,19 @@
                         <li>CSS</li>
                     </ul>
                 </section>
-                <section>
+                <section class="projects">
                     <h1>Projects</h1>
                     <h3>Personal website</h3>
                     <ul>
                         <li>Portfolio website made with HTML and CSS</li>
                     </ul>
                 </section>
-                <section>
+                <section class="experience">
                     <h1>Experience</h1>
                     <h3>Hack4Impact</h3>
-                    <li>Completed the Hack4Impact starter pack</li>
+                    <ul>
+                        <li>Completed the Hack4Impact starter pack</li>
+                    </ul>
                 </section>
             </div>
         </div>
