Changes to resume

--- a/resume.html
+++ b/resume.html
@@ -36,19 +36,17 @@
                 <section class="coursework">
                     <h1>Coursework</h1>
                     <ul>
-                        <li>Data Structures</li>
+                        <li>Data Structures & Algorithms</li>
                         <li>Object-Oriented Programming</li>
-                        <li>Fundamentals of Computer Science</li>
-                        <li>Linear Algebra</li>
-                        <li>Calculus I, II, and III</li>
+                        <li>Systems Programming</li>
                     </ul>
                 </section>
                 <section class="skills">
                     <h1>Skills</h1>
                     <ul>
                         <li>Python</li>
-                        <li>HTML</li>   
-                        <li>CSS</li>
+                        <li>Java</li>   
+                        <li>C</li>
                     </ul>
                 </section>
                 <section class="projects">
